remove issues with overflow that cut off content

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -4,8 +4,6 @@ body{
 	font-family:$main-ff;
 	max-width:1440px;
   position:relative;
-  // height:100vh;
-  overflow: hidden;
 }
 
 header{
