--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,6 @@ body {
   font-family: "Poppins", sans-serif;
   max-width: 1440px;
   position: relative;
-  overflow: hidden;
 }
 
 header {
